crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_create_vault_create_error_unsafe_permissions.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: "render_to_text(&state, snapshot_now(), 80, 16)"
---
┌ Paladin Auth — create vault ─────────────────────────────────────────────────┐
│                                                                              │
│  Vault: /var/lib/paladin-auth/vault.bin                                      │
│                                                                              │
│  Choose vault protection:                                                    │
│                                                                              │
│  ▶ Encrypted (recommended) — protect this vault with a passphrase.           │
│    Plaintext (insecure) — store secrets unencrypted on disk.                 │
│                                                                              │
│  ↑/↓ or j/k to select; Enter to continue; q or Esc to quit.                  │
│                                                                              │
│  unsafe permissions on /var/lib/paladin-auth: vault directory mode 0755,     │
│  expected 0700.Run: chmod 0700 /var/lib/paladin-auth                         │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
